public/style.css
/* ... */
.gap-5{
  gap: 1.25rem;
}

.space-x-4 > :not([hidden]) ~ :not([hidden]){
  --tw-space-x-reverse: 0;
  margin-right: calc(1rem * var(--tw-space-x-reverse));
  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
}

.space-x-1 > :not([hidden]) ~ :not([hidden]){
  --tw-space-x-reverse: 0;
  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
}

.self-start{
  align-self: flex-start;
}

.justify-self-center{
  justify-self: center;
}

.rounded-bl-5xl{
  border-bottom-left-radius: 5.5rem;
}

.rounded-tl-5xl{
  border-top-left-radius: 5.5rem;
}

.border-2{
  border-width: 2px;
}

.border-b-4{
  border-bottom-width: 4px;
}

.border-blue-500{
  --tw-border-opacity: 1;
  border-color: rgba(59, 130, 246, var(--tw-border-opacity));
}

.border-purple-300{
  --tw-border-opacity: 1;
  border-color: rgba(196, 181, 253, var(--tw-border-opacity));
}

.border-highlight{
  --tw-border-opacity: 1;
  border-color: rgba(128, 139, 151, var(--tw-border-opacity));
}

.bg-gray-100{
  --tw-bg-opacity: 1;
  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
}

.bg-primary{
  --tw-bg-opacity: 1;
  background-color: rgba(251, 251, 251, var(--tw-bg-opacity));
}

.bg-secondary{
  --tw-bg-opacity: 1;
  background-color: rgba(255, 241, 193, var(--tw-bg-opacity));
}

.bg-tertiary{
  --tw-bg-opacity: 1;
  background-color: rgba(120, 183, 187, var(--tw-bg-opacity));
}

.bg-highlight{
  --tw-bg-opacity: 1;
  background-color: rgba(128, 139, 151, var(--tw-bg-opacity));
}

.bg-contain{
  background-size: contain;
}

.bg-no-repeat{
  background-repeat: no-repeat;
}

.fill-current{
  fill: currentColor;
}

.p-3\.5{
  padding: 0.875rem;
}

.p-3{
  padding: 0.75rem;
}

.p-2\.5{
  padding: 0.625rem;
}

.p-2{
  padding: 0.5rem;
}

.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}

.py-5{
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

.px-2{
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.px-3{
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.py-2{
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.text-center{
  text-align: center;
}

.text-justify{
  text-align: justify;
}

.font-primary{
  font-family: Ubuntu, sans-serif;
}

.font-secondary{
  font-family: Prompt, sans-serif;
}

.text-sm{
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-5xl{
  font-size: 3rem;
  line-height: 1;
}

.text-xs{
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-4xl{
  font-size: 2.25rem;
  line-height: 2.5rem;
}

.text-3xl{
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-base{
  font-size: 1rem;
  line-height: 1.5rem;
}

.font-bold{
  font-weight: 700;
}

.font-semibold{
  font-weight: 600;
}

.font-normal{
  font-weight: 400;
}

.font-black{
  font-weight: 900;
}

.font-light{
  font-weight: 300;
}

.font-medium{
  font-weight: 500;
}

.leading-6{
  line-height: 1.5rem;
}

.text-gray-700{
  --tw-text-opacity: 1;
  color: rgba(55, 65, 81, var(--tw-text-opacity));
}

.text-highlight{
  --tw-text-opacity: 1;
  color: rgba(128, 139, 151, var(--tw-text-opacity));
}

.text-tertiary{
  --tw-text-opacity: 1;
  color: rgba(120, 183, 187, var(--tw-text-opacity));
}

.text-secondary{
  --tw-text-opacity: 1;
  color: rgba(255, 241, 193, var(--tw-text-opacity));
}

.text-white{
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}

.opacity-70{
  opacity: 0.7;
}

.shadow-lg{
  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.blur-md{
  --tw-blur: blur(12px);
  filter: var(--tw-filter);
}

.drop-shadow-2xl{
  --tw-drop-shadow: drop-shadow(0 25px 25px rgba(0, 0, 0, 0.15));
  filter: var(--tw-filter);
}

.filter{
  filter: var(--tw-filter);
}

/* animation slide to bottom  */

@-webkit-keyframes slide-bottom {
  0% {
    -webkit-transforwm: translateY(-60px);
    transform: translateY(-60px);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes slide-bottom {
  0% {
    transform: translateY(-60px);
  }

  100% {
    transform: translateY(0);
  }
}

.slide-bottom {
  -webkit-animation: slide-bottom 0.5s ease-in both;
  animation: slide-bottom 0.5s ease-in both;
}

.hover\:bg-yellow-200:hover{
  --tw-bg-opacity: 1;
  background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
}

.hover\:bg-purple-300:hover{
  --tw-bg-opacity: 1;
  background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
}

@media (min-width: 768px){
  .md\:flex{
    display: flex;
  }

  .md\:hidden{
    display: none;
  }
}

@media (min-width: 1024px){
  .lg\:-ml-5{
    margin-left: -1.25rem;
  }
}

